- Update to 1.21 [1] - Convert to optionsng
PR:		ports/177941 [1]
Submitted by:	Sebastien Santoro <dereckson@espace-win.org> (maintainer, from another address)
Feature safe:	yes


git-svn-id: svn+ssh://svn.freebsd.org/ports/head@316037 35697150-7ecd-e111-bb59-0022644237b5

--- a/devel/git-review/Makefile
+++ b/devel/git-review/Makefile
@@ -1,7 +1,7 @@
 # $FreeBSD$
 
 PORTNAME=	git-review
-PORTVERSION=	1.20
+PORTVERSION=	1.21
 CATEGORIES=	devel python
 MASTER_SITES=	CHEESESHOP
 MASTER_SITE_SUBDIR=	source/g/${PORTNAME}
@@ -19,13 +19,15 @@ NO_BUILD=	yes
 
 MAN1=		git-review.1
 
+.include <bsd.port.options.mk>
+
 do-install:
 	${INSTALL_SCRIPT} ${WRKSRC}/git-review ${PREFIX}/bin/git-review
 	${INSTALL_MAN} ${WRKSRC}/git-review.1 ${PREFIX}/man/man1
-.if !defined(NOPORTDOCS)
+.if ${PORT_OPTIONS:MDOCS}
 	${MKDIR} ${DOCSDIR}
 	${INSTALL_MAN} ${WRKSRC}/README.md ${DOCSDIR}
-	${INSTALL_MAN} ${WRKSRC}/HACKING ${DOCSDIR}
+	${INSTALL_MAN} ${WRKSRC}/HACKING.rst ${DOCSDIR}
 	${INSTALL_MAN} ${WRKSRC}/AUTHORS ${DOCSDIR}
 .endif
 
