- Take maintainership - Add an OPTION to build the shared library in addition to the static one - Add DOCS to OPTIONs
Feature safe:	yes


git-svn-id: svn+ssh://svn.freebsd.org/ports/head@316038 35697150-7ecd-e111-bb59-0022644237b5

--- a/math/libtommath/Makefile
+++ b/math/libtommath/Makefile
@@ -6,17 +6,45 @@ CATEGORIES=	math
 MASTER_SITES=	http://libtom.org/files/
 DISTNAME=	ltm-${PORTVERSION}
 
-MAINTAINER=	ports@FreeBSD.org
+MAINTAINER=	gahr@FreeBSD.org
 COMMENT=	Comprehensive, modular, and portable mathematical routines
 
+OPTIONS_DEFINE=	DOCS SHARED
+SHARED_DESC=	Build shared library
+
 WRKSRC=		${WRKDIR}/${PORTNAME}-${PORTVERSION}
-MAKEFILE=	makefile
 USE_BZIP2=	yes
 USE_GMAKE=	yes
 ALL_TARGET=	default
+CFLAGS+=	-fPIC
+PORTDOCS=	*
 MAKE_JOBS_SAFE=	yes
 
 PLIST_FILES=	include/tommath.h include/tommath_class.h \
 		include/tommath_superclass.h lib/libtommath.a
+
+.include <bsd.port.options.mk>
+
+post-patch:
+	${REINPLACE_CMD} -e 's|gcc|${CC}|g' ${WRKSRC}/makefile.shared
+
+.if ${PORT_OPTIONS:MSHARED}
+BUILD_DEPENDS=	libtool:${PORTSDIR}/devel/libtool
+USE_LDCONFIG=	yes
+PLIST_FILES+=	lib/libtommath.la lib/libtommath.so.0 lib/libtommath.so
+MAKEFILE=	makefile.shared
+PLIST_SUB+=	SHARED=""
+.else
+MAKEFILE=	makefile
+PLIST_SUB+=	SHARED="@comment "
+.endif
+
+.if ${PORT_OPTIONS:MDOCS}
+post-install:
+	${MKDIR} ${DOCSDIR}
+	${INSTALL_DATA} ${WRKSRC}/bn.pdf ${DOCSDIR}/
+	${INSTALL_DATA} ${WRKSRC}/poster.pdf ${DOCSDIR}/
+	${INSTALL_DATA} ${WRKSRC}/tommath.pdf ${DOCSDIR}/
+.endif
 
 .include <bsd.port.mk>
