--- a/print/lilypond-devel/Makefile
+++ b/print/lilypond-devel/Makefile
@@ -5,6 +5,7 @@ PORTNAME=	lilypond
 PORTVERSION=	2.17.16
 CATEGORIES=	print audio
 MASTER_SITES=	http://download.linuxaudio.org/lilypond/sources/v${PORTVERSION:R}/
+PKGNAMESUFFIX=	-devel
 
 MAINTAINER=	gahr@FreeBSD.org
 COMMENT=	The GNU music typesetter
