Vortex is a near real time IDS and network surveillance engine for TCP stream data. Vortex decouples packet capture, stream reassembly, and real time constraints from analysis. Vortex is used to provide TCP stream data to a separate analyzer program.
Feature safe: yes


git-svn-id: svn+ssh://svn.freebsd.org/ports/head@316046 35697150-7ecd-e111-bb59-0022644237b5

--- a/net/Makefile
+++ b/net/Makefile
@@ -1214,6 +1214,7 @@
     SUBDIR += vnc
     SUBDIR += vncreflector
     SUBDIR += vnstat
+    SUBDIR += vortex
     SUBDIR += vserver
     SUBDIR += vtun
     SUBDIR += wackamole
