- Change cache directory from ~/.npm to WRKSRC/tmp to avoid access on ~root/
PR:		ports/177091
Submitted by:	John Marino <draco@marino.st>
Obtained from:	crees
Feature safe:	yes


git-svn-id: svn+ssh://svn.freebsd.org/ports/head@316049 35697150-7ecd-e111-bb59-0022644237b5

--- a/www/npm/Makefile
+++ b/www/npm/Makefile
@@ -44,6 +44,9 @@ RUN_DEPENDS+=	node-devel>=0.8.0:${PORTSDIR}/www/node-devel
 RUN_DEPENDS+=	node>=0.8.0:${PORTSDIR}/www/node
 .endif
 
+post-patch:
+	@${REINPLACE_CMD} -e 's|node cli.js|& --cache ${WRKSRC}/tmp|' ${WRKSRC}/Makefile
+
 # maintainer section:
 # require: bash, git, gmake, node
 
