- Update to 0.2.3 - Cleanup Makefile header
Changes:	https://github.com/nulayer/subexec/commits/master
Feature safe:	yes


git-svn-id: svn+ssh://svn.freebsd.org/ports/head@316054 35697150-7ecd-e111-bb59-0022644237b5

--- a/devel/rubygem-subexec/Makefile
+++ b/devel/rubygem-subexec/Makefile
@@ -1,12 +1,8 @@
-# New ports collection makefile for:	rubygem-subexec
-# Date created:		2011-11-02
-# Whom:			Sunpoet Po-Chuan Hsieh <sunpoet@FreeBSD.org>
-#
+# Created by: Sunpoet Po-Chuan Hsieh <sunpoet@FreeBSD.org>
 # $FreeBSD$
-#
 
 PORTNAME=	subexec
-PORTVERSION=	0.2.2
+PORTVERSION=	0.2.3
 CATEGORIES=	devel rubygems
 MASTER_SITES=	RG
 
