--- a/devel/p5-Future/Makefile
+++ b/devel/p5-Future/Makefile
@@ -2,7 +2,7 @@
 # $FreeBSD$
 
 PORTNAME=	Future
-PORTVERSION=	0.10
+PORTVERSION=	0.12
 CATEGORIES=	devel perl5
 MASTER_SITES=	CPAN
 MASTER_SITE_SUBDIR=	CPAN:PEVANS
@@ -16,13 +16,15 @@ LICENSE_COMB=	dual
 
 TEST_DEPENDS=	p5-Test-Fatal>0:${PORTSDIR}/devel/p5-Test-Fatal \
 		p5-Test-Identity>0:${PORTSDIR}/devel/p5-Test-Identity \
-		p5-Test-Refcount>0:${PORTSDIR}/devel/p5-Test-Refcount
+		p5-Test-Refcount>0:${PORTSDIR}/devel/p5-Test-Refcount \
+		p5-Test-Warn>0:${PORTSDIR}/devel/p5-Test-Warn
 
 PERL_MODBUILD=	yes
 
-MAN3=		Future.3 Future::Utils.3
+MAN3=		Future.3 Future::Phrasebook.3 Future::Utils.3
 
-PLIST_FILES=	%%SITE_PERL%%/Future.pm %%SITE_PERL%%/Future/Utils.pm
+PLIST_FILES=	%%SITE_PERL%%/Future.pm %%SITE_PERL%%/Future/Phrasebook.pod \
+		%%SITE_PERL%%/Future/Utils.pm
 PLIST_DIRS=	%%SITE_PERL%%/Future
 
 .include <bsd.port.mk>
