Update regripperplugins to 20130404
Approved by:	eadler (mentor)
Feature safe:	yes


git-svn-id: svn+ssh://svn.freebsd.org/ports/head@316072 35697150-7ecd-e111-bb59-0022644237b5

--- a/security/regripperplugins/Makefile
+++ b/security/regripperplugins/Makefile
@@ -2,10 +2,10 @@
 # $FreeBSD$
 
 PORTNAME=	regripperplugins
-DISTVERSION=	20130218
+PORTVERSION=	20130404
 CATEGORIES=	security
 MASTER_SITES=	GOOGLE_CODE
-DISTNAME=	${PORTNAME}_${DISTVERSION}
+DISTNAME=	plugins${PORTVERSION}
 
 MAINTAINER=	antoine@FreeBSD.org
 COMMENT=	Supplemental plugins for Harlan Carvey's RegRipper
@@ -15,9 +15,11 @@ LICENSE=	GPLv3
 RUN_DEPENDS=	regripper>=0:${PORTSDIR}/security/regripper
 
 USE_ZIP=	yes
-NO_WRKSUBDIR=	yes
+WRKSRC=		${WRKDIR}/plugins
 USE_DOS2UNIX=	yes
 NO_BUILD=	yes
+PROJECTHOST=	regripper
+PORTDATA=	*
 
 do-install:
 	@${MKDIR} ${DATADIR}
