Fix munin-sched rc script
PR:		ports/177950
Submitted by:	Geoffroy Desvernay <dgeo@centrale-marseille.fr>
Feature safe:	yes


git-svn-id: svn+ssh://svn.freebsd.org/ports/head@316077 35697150-7ecd-e111-bb59-0022644237b5

--- a/sysutils/munin-node/files/munin-sched.in
+++ b/sysutils/munin-node/files/munin-sched.in
@@ -31,7 +31,7 @@ stop_precmd=find_pidfile
 find_pidfile()
 {
 	if type get_pidfile_from_conf >/dev/null 2>&1 &&
-		get_pidfile_from_conf pid_file $munin_node_config; then
+		get_pidfile_from_conf pid_file $munin_sched_config; then
 	    pidfile="${_pidfile_from_conf%node*}sched"
 	    pidfile="${pidfile}${_pidfile_from_conf#*node}"
 	else
