Fix build with LZMA.  All supported versions have liblzma in the base.
Approved by:	gnome (mezz)
Feature safe:	yes


git-svn-id: svn+ssh://svn.freebsd.org/ports/head@316079 35697150-7ecd-e111-bb59-0022644237b5

--- a/textproc/libxml2/Makefile
+++ b/textproc/libxml2/Makefile
@@ -4,7 +4,7 @@
 
 PORTNAME=	libxml2
 PORTVERSION=	2.8.0
-PORTREVISION?=	1
+PORTREVISION?=	2
 CATEGORIES?=	textproc gnome
 MASTER_SITES=	ftp://xmlsoft.org/libxml2/ \
 		http://xmlsoft.org/sources/ \
@@ -27,9 +27,8 @@ USE_LDCONFIG=	yes
 CONFIGURE_ARGS?=--with-iconv=${LOCALBASE} \
 		--with-html-dir=${PREFIX}/share/doc \
 		--with-html-subdir=${PORTNAME} \
+		--with-lzma=/usr \
 		--without-python
-CPPFLAGS+=	-I${LOCALBASE}/include
-LDFLAGS+=	-L${LOCALBASE}/lib
 
 .if !defined(MASTERDIR)
 MAN1=		xml2-config.1 xmllint.1 xmlcatalog.1
