- update deskutils/virt-manager to 0.9.5 - update net-mgmt/virtinst to 0.600.4
Feature safe:	yes


git-svn-id: svn+ssh://svn.freebsd.org/ports/head@316080 35697150-7ecd-e111-bb59-0022644237b5

--- a/net-mgmt/virtinst/Makefile
+++ b/net-mgmt/virtinst/Makefile
@@ -2,8 +2,7 @@
 # $FreeBSD$
 
 PORTNAME=	virtinst
-PORTVERSION=	0.600.3
-PORTREVSION=	2
+PORTVERSION=	0.600.4
 CATEGORIES=	net-mgmt
 MASTER_SITES=	http://virt-manager.org/download/sources/${PORTNAME}/
 PKGNAMEPREFIX=	${PYTHON_PKGNAMEPREFIX}
@@ -22,5 +21,9 @@ USE_PYDISTUTILS=	yes
 MAN1=		virt-clone.1 virt-convert.1 virt-image.1 virt-install.1
 MAN5=		virt-image.5
 MANCOMPRESSED=	no
+
+post-patch-script:
+	${REINPLACE_CMD} 's|share/man|man|g' \
+		${WRKSRC}/setup.py
 
 .include <bsd.port.mk>
