- update to 1.0.5 [1] - adjust MASTER_SITES and project site (pkg-descr) [1] - while here add documentation support and rc service script - take maintainership
Suggested by:	eddy.vervest@xs4all.nl, software author [1]

Feature safe:	yes


git-svn-id: svn+ssh://svn.freebsd.org/ports/head@316081 35697150-7ecd-e111-bb59-0022644237b5

--- a/net/htpdate/Makefile
+++ b/net/htpdate/Makefile
@@ -1,18 +1,13 @@
-# New ports collection makefile for:	htpdate
-# Date created:			9 Jun 2005
-# Whom:				Vsevolod Stakhov <vsevolod@highsecure.ru>
-#
+# Created by: Vsevolod Stakhov <vsevolod@highsecure.ru>
 # $FreeBSD$
-#
 
 PORTNAME=	htpdate
-PORTVERSION=	1.0.4
-PORTREVISION=	1
+PORTVERSION=	1.0.5
 CATEGORIES=	net ipv6
-MASTER_SITES=	http://www.clevervest.com/htp/archive/c/ \
+MASTER_SITES=	http://www.vervest.org/htp/archive/c/ \
 		http://twekkel.home.xs4all.nl/htp/
 
-MAINTAINER=	ports@FreeBSD.org
+MAINTAINER=	jgh@FreeBSD.org
 COMMENT=	Time synchronization over http utility
 
 LICENSE=	GPLv2 # (or later)
@@ -23,9 +18,19 @@ MAKE_ARGS=	CC="${CC}" CFLAGS="${CFLAGS}"
 MANCOMPRESSED=	yes
 MAN8=		${PORTNAME}.8
 PLIST_FILES=	bin/${PORTNAME}
+PORTDOCS=	Changelog README
+USE_RC_SUBR=	${PORTNAME}
+
+.include <bsd.port.options.mk>
 
 do-install:
 	${INSTALL_PROGRAM} ${WRKSRC}/${PORTNAME} ${PREFIX}/bin
 	${INSTALL_MAN} ${WRKSRC}/${PORTNAME}.8.gz ${MAN8PREFIX}/man/man8
+.if ${PORT_OPTIONS:MDOCS}
+	@${MKDIR} ${DOCSDIR}
+.for doc in ${PORTDOCS}
+	${INSTALL_DATA} ${WRKSRC}/${doc} ${DOCSDIR}
+.endfor
+.endif
 
 .include <bsd.port.mk>
