--- a/devel/astyle/Makefile
+++ b/devel/astyle/Makefile
@@ -1,9 +1,5 @@
-# New ports collection makefile for:	astyle
-# Date created:		31 Jan 1999
-# Whom:			Don Croyle <croyle@gelemna.org>
-#
+# Created by: Don Croyle <croyle@gelemna.org>
 # $FreeBSD$
-#
 
 PORTNAME=	astyle
 PORTVERSION=	2.02.1
@@ -12,7 +8,7 @@ MASTER_SITES=	SF/${PORTNAME}/${PORTNAME}/${PORTNAME}%20${PORTVERSION}
 DISTNAME=	${PORTNAME}_${PORTVERSION}_linux
 
 MAINTAINER=	lme@FreeBSD.org
-COMMENT=	A reindenter and reformatter of C, C++, C\#, and Java source code
+COMMENT=	Source code indenter and formatter for C, C++, C\#, and Java
 
 ALL_TARGET=	astyle
 CFLAGS+=	-W -Wall -fno-rtti -fno-exceptions
@@ -26,14 +22,16 @@ WRKSRC=		${WRKDIR}/astyle/build/gcc
 pre-patch:
 	@${REINPLACE_CMD} -e 's,^CFLAGS,#CFLAGS,; s,g++,${CXX},;' ${WRKSRC}/Makefile
 
+.include <bsd.port.options.mk>
+
 PLIST_FILES=	bin/astyle
-.if !defined(NOPORTDOCS)
+.if ${PORT_OPTIONS:MDOCS}
 PORTDOCS=	*
 .endif
 
 do-install:
 	${INSTALL_PROGRAM} ${WRKSRC}/bin/astyle ${PREFIX}/bin
-.if !defined(NOPORTDOCS)
+.if ${PORT_OPTIONS:MDOCS}
 	${MKDIR} ${DOCSDIR}
 	${INSTALL_DATA} ${WRKDIR}/astyle/doc/*.html ${DOCSDIR}
 .endif
