The Event Notify Test Runner is a general-purpose UNIX utility intended to make rapid feedback and automated testing natural and completely ordinary by running arbitrary commands when files change
WWW: http://entrproject.org/

Feature safe:	yes


git-svn-id: svn+ssh://svn.freebsd.org/ports/head@316084 35697150-7ecd-e111-bb59-0022644237b5

--- a/sysutils/Makefile
+++ b/sysutils/Makefile
@@ -212,6 +212,7 @@
     SUBDIR += eject
     SUBDIR += empower
     SUBDIR += endian
+    SUBDIR += entr
     SUBDIR += enteruser
     SUBDIR += env4801
     SUBDIR += epylog
