- Deprecate: Abandoned upstream, does not support pkgng.
PR: ports/155697 (based on)
Submitted by:	Pavel Gubin <pg@2lazy.ru>
Approved by:	maintainer timeout (>2 years)
Feature safe:	yes


git-svn-id: svn+ssh://svn.freebsd.org/ports/head@316086 35697150-7ecd-e111-bb59-0022644237b5

--- a/ports-mgmt/pkg_replace/Makefile
+++ b/ports-mgmt/pkg_replace/Makefile
@@ -1,9 +1,5 @@
-# New ports collection makefile for:	pkg_replace
-# Date created:				16 October 2006
-# Whom:					Securedog <securedog@users.sourceforge.jp>
-#
+# Created by: Securedog <securedog@users.sourceforge.jp>
 # $FreeBSD$
-#
 
 PORTNAME=	pkg_replace
 PORTVERSION=	0.8.0
@@ -12,7 +8,10 @@ MASTER_SITES=	${MASTER_SITE_SOURCEFORGE_JP}
 MASTER_SITE_SUBDIR=portutil/22116
 
 MAINTAINER=	securedog@users.sourceforge.jp
-COMMENT=	A utility for upgrading installed packages
+COMMENT=	Utility for upgrading installed packages
+
+DEPRECATED=	Abandoned upstream, does not support pkgng. Consider using ports-mgmt/portmaster, ports-mgmt/portupgrade or pkgng
+EXPIRATION_DATE=	2013-12-31
 
 USE_BZIP2=	YES
 MAKE_ARGS=	PREFIX="${PREFIX}" \
