--- a/emulators/pcsxr/Makefile
+++ b/emulators/pcsxr/Makefile
@@ -1,12 +1,8 @@
-# New ports collection makefile for:	pcsxr
-# Date created:		11 June 2010
-# Whom:			Ganael Laplanche <ganael.laplanche@martymac.org>
-#
+# Created by: Ganael Laplanche <ganael.laplanche@martymac.org>
 # $FreeBSD$
-#
 
 PORTNAME=	pcsxr
-PORTVERSION=	1.9.92.r81088
+PORTVERSION=	1.9.92.r84102
 CATEGORIES=	emulators
 MASTER_SITES=	http://contribs.martymac.org/FreeBSD-ports/distfiles/ \
 		LOCAL/martymac
@@ -35,7 +31,7 @@ USE_LDCONFIG=	yes
 USE_DOS2UNIX=	yes
 DOS2UNIX_REGEX=	.*\.(c|h|cpp|hpp|am)
 
-USE_GNOME=	gtk20 desktopfileutils glib20
+USE_GNOME=	gtk30 desktopfileutils glib20
 USE_ICONV=	yes
 USE_XORG=	x11 xv xext xxf86vm xtst
 USE_SDL=	sdl
