Unbreak after libxml2 2.8.0_2 update.
Reported by:	zeissoctopus on IRC
Feature safe:	yes


git-svn-id: svn+ssh://svn.freebsd.org/ports/head@316090 35697150-7ecd-e111-bb59-0022644237b5

--- a/textproc/py-libxml2/Makefile
+++ b/textproc/py-libxml2/Makefile
@@ -17,7 +17,7 @@ PLIST=		${.CURDIR}/pkg-plist
 USE_GNOME+=	libxml2
 USE_PYTHON=	yes
 CPPFLAGS+=	`${PYTHON_VERSION}-config --cflags`
-LDFLAGS+=	`${PYTHON_VERSION}-config --libs`
+LDFLAGS+=	-L${LOCALBASE}/lib `${PYTHON_VERSION}-config --libs`
 CONFIGURE_ARGS=	--with-iconv=${LOCALBASE} \
 		--with-html-dir=${PREFIX}/share/doc \
 		--with-html-subdir=${PORTNAME} \
