--- a/sysutils/auto-admin/Makefile
+++ b/sysutils/auto-admin/Makefile
@@ -1,12 +1,8 @@
-# New ports collection makefile for:	auto-admin
-# Date created:		2011-11-01
-# Whom:			Jason Bacon <jwbacon@tds.net>
-#
+# Created by: Jason Bacon <jwbacon@tds.net>
 # $FreeBSD$
-#
 
 PORTNAME=	auto-admin
-PORTVERSION=	0.3
+PORTVERSION=	0.3.1
 CATEGORIES=	sysutils
 MASTER_SITES=	http://acadix.biz/Ports/distfiles/ \
 		http://personalpages.tds.net/~jwbacon/Ports/distfiles/
@@ -18,16 +14,16 @@ NO_BUILD=	yes
 
 MAN1=		auto-admin.1 \
 		auto-amd-nfs-setup.1 \
-		auto-amd-local-setup.1 \
 		auto-append-line.1 \
 		auto-ask.1 \
 		auto-clean-ports.1 \
+		auto-db-dir.1 \
 		auto-disable-service.1 \
 		auto-enable-compat32.1 \
 		auto-enable-passwdqc.1 \
 		auto-enable-procfs.1 \
 		auto-enable-service.1 \
-		auto-set-suspend-on-lid.1 \
+		auto-set-suspend-mode.1 \
 		auto-fastest-mirror.1 \
 		auto-install-packages.1 \
 		auto-ipfw-gateway-setup.1 \
@@ -35,6 +31,7 @@ MAN1=		auto-admin.1 \
 		auto-ldap-adduser.1 \
 		auto-ldap-client-setup.1 \
 		auto-package-installed.1 \
+		auto-print-make-variable.1 \
 		auto-replace-file.1 \
 		auto-service-enabled.1 \
 		auto-update-port-framework.1 \
@@ -43,11 +40,12 @@ MAN1=		auto-admin.1 \
 
 do-install:
 	${MKDIR} ${PREFIX}/sbin ${DATADIR}
-	${INSTALL_SCRIPT} ${WRKSRC}/Scripts/* ${PREFIX}/sbin
+	${INSTALL_SCRIPT} ${WRKSRC}/Scripts/Common/* ${PREFIX}/sbin
+	${INSTALL_SCRIPT} ${WRKSRC}/Scripts/FreeBSD/* ${PREFIX}/sbin
 	${INSTALL_DATA} ${WRKSRC}/Data/* ${DATADIR}
 	${INSTALL_MAN} ${WRKSRC}/Doc/auto-admin.man \
 		${MANPREFIX}/man/man1/auto-admin.1
-	for name in ${WRKSRC}/Scripts/*; do \
+	for name in ${WRKSRC}/Scripts/Common/* ${WRKSRC}/Scripts/FreeBSD/*; do \
 		${INSTALL_MAN} ${WRKSRC}/Doc/auto-admin.man \
 			${MANPREFIX}/man/man1/`basename $${name}`.1; \
 	done
