- Convert to new options framework - Do not silence installation message - Cosmetic change
Feature safe:	yes


git-svn-id: svn+ssh://svn.freebsd.org/ports/head@316112 35697150-7ecd-e111-bb59-0022644237b5

--- a/devel/p5-Event/Makefile
+++ b/devel/p5-Event/Makefile
@@ -10,16 +10,20 @@ PKGNAMEPREFIX=	p5-
 MAINTAINER=	perl@FreeBSD.org
 COMMENT=	Generic Perl Event Loop
 
+OPTIONS_DEFINE=	DOCS
+
 PERL_CONFIGURE=	yes
-PORTDOCS=	ANNOUNCE ChangeLog INSTALL MANIFEST README TODO Tutorial.pdf
 
 MAN3=		Event.3 Event::MakeMaker.3 Event::generic.3
+PORTDOCS=	ANNOUNCE ChangeLog INSTALL MANIFEST README TODO Tutorial.pdf
+
+.include <bsd.port.options.mk>
 
 post-install:
-.ifndef(NOPORTDOCS)
+.if ${PORT_OPTIONS:MDOCS}
 	@${ECHO_MSG} "===>   Installing documentation for ${PKGNAME}"
-	@${MKDIR} ${DOCSDIR}
-	@${INSTALL_DATA} ${PORTDOCS:S,^,${WRKSRC}/,} ${DOCSDIR}/
+	${MKDIR} ${DOCSDIR}/
+	cd ${WRKSRC}/ && ${INSTALL_DATA} ${PORTDOCS} ${DOCSDIR}/
 .endif
 
 .include <bsd.port.mk>
