add new port: www/qupzilla
QupZilla is a new and very fast QtWebKit browser. It aims to be a lightweight
web browser available through all major platforms. This project has been
originally started only for educational purposes. But from its start, QupZilla
has grown into a feature-rich browser.

QupZilla has all standard functions you expect from a web browser. It includes
bookmarks, history (both also in sidebar) and tabs. Above that, you can manage
RSS feeds with an included RSS reader, block ads with a builtin AdBlock plugin,
block Flash content with Click2Flash and edit the local CA Certificates
database with an SSL Manager.

QupZilla's main aim is to be a very fast and very stable QtWebKit browser
available to everyone.  There are already a lot of QtWebKit browsers available,
but they are either bound to the KDE environment (rekonq), are not actively
developed or very unstable and miss important features. But there is missing a
multiplatform, modern and actively developed browser. QupZilla is trying to
fill this gap by providing a very stable browsing experience.

WWW: http://www.qupzilla.com

PR:		ports/177101
Submitted by:	Javad Kouhi <javad.kouhi@gmail.com>

Feature safe:	yes


git-svn-id: svn+ssh://svn.freebsd.org/ports/head@316116 35697150-7ecd-e111-bb59-0022644237b5

--- a/www/Makefile
+++ b/www/Makefile
@@ -1668,6 +1668,7 @@
     SUBDIR += qt4-webkit
     SUBDIR += quickie
     SUBDIR += quixote
+    SUBDIR += qupzilla
     SUBDIR += red5
     SUBDIR += redmine
     SUBDIR += redmine-backlogs
