Update to the 20130418 snapshot of GCC 4.8.1.  This no longer installs libffi and its info and man pages which was always meant to remain for internal use only.
Feature safe:	yes


git-svn-id: svn+ssh://svn.freebsd.org/ports/head@316124 35697150-7ecd-e111-bb59-0022644237b5

--- a/lang/gcc48/Makefile
+++ b/lang/gcc48/Makefile
@@ -2,7 +2,7 @@
 # $FreeBSD$
 
 PORTNAME=	gcc
-PORTVERSION=	4.8.1.20130328
+PORTVERSION=	4.8.1.20130418
 CATEGORIES=	lang java
 MASTER_SITES=	${MASTER_SITE_GCC}
 MASTER_SITE_SUBDIR=	snapshots/${VERSIONSTRING}
@@ -132,8 +132,7 @@ MAN3=		ffi${SUFFIX}.3 \
 		ffi_prep_cif${SUFFIX}.3 \
 		ffi_prep_cif_var${SUFFIX}.3
 INFO+=		gcc${SUFFIX}/cp-tools \
-		gcc${SUFFIX}/gcj \
-		gcc${SUFFIX}/libffi
+		gcc${SUFFIX}/gcj
 PLIST_SUB+=	JAVA=""
 .else
 CONFIGURE_ARGS+=--disable-libgcj
