--- a/comms/zmtx-zmrx/Makefile
+++ b/comms/zmtx-zmrx/Makefile
@@ -1,10 +1,5 @@
-# ex:ts=8
-# Ports collection makefile for:  zmtx-zmrx
-# Date created:			  29 July 1996
-# Whom:				  David O'Brien <obrien@cs.ucdavis.edu>
-#
+# Created by: David O'Brien <obrien@cs.ucdavis.edu>
 # $FreeBSD$
-#
 
 PORTNAME=	zmtx-zmrx
 PORTVERSION=	1.02
@@ -12,24 +7,26 @@ CATEGORIES=	comms
 MASTER_SITES=	ftp://ftp.netsw.org/net/modem/protocols/zmodem/zmtx-zmrx/
 
 MAINTAINER=	delphij@FreeBSD.org
-COMMENT=	Receive/Send files via ZMODEM protocol.  (unrestrictive)
+COMMENT=	Send and receive files via ZMODEM protocol (unrestrictive)
 
-WRKSRC=		${WRKDIR}/${PORTNAME}
+USE_CSTD=	gnu89
+
 MAKEFILE=	makefile
 MAKE_JOBS_SAFE=	yes
+WRKSRC=		${WRKDIR}/${PORTNAME}
+
 MAN1=		zmrx.1 zmtx.1
 PLIST_FILES=	bin/zmrx bin/zmtx
-USE_CSTD=	gnu89
 
 do-install:
 .for f in zmrx zmtx
 	${INSTALL_PROGRAM} ${WRKSRC}/${f} ${PREFIX}/bin
-	${INSTALL_MAN} ${WRKSRC}/${f}.1 ${PREFIX}/man/man1
+	${INSTALL_MAN} ${WRKSRC}/${f}.1 ${MANPREFIX}/man/man1
 .endfor
 
 post-install:
-	@${ECHO_MSG} ""
+	@${ECHO_MSG}
 	@${CAT} ${PKGMESSAGE}
-	@${ECHO_MSG} ""
+	@${ECHO_MSG}
 
 .include <bsd.port.mk>
