Prevent libgii from building linux specific modules if linux headers are found.
Reported by:	avg
Approved by:	eadler (mentor)
Feature safe:	yes


git-svn-id: svn+ssh://svn.freebsd.org/ports/head@316127 35697150-7ecd-e111-bb59-0022644237b5

--- a/devel/libgii/Makefile
+++ b/devel/libgii/Makefile
@@ -185,6 +185,8 @@ OPTIONS_DEFAULT=X11
 
 .include <bsd.port.options.mk>
 
+CONFIGURE_ARGS=	--disable-linux-kbd --disable-linux-joy --disable-linux-evdev
+
 .if exists(/usr/include/dev/kii/kii.h)
 CONFIGURE_ARGS+=--enable-kii --with-extra-includes=/usr/include/dev
 PLIST_SUB+=	KII=""
