--- a/devel/Makefile
+++ b/devel/Makefile
@@ -2086,6 +2086,7 @@
     SUBDIR += p5-IO-CaptureOutput
     SUBDIR += p5-IO-Detect
     SUBDIR += p5-IO-Digest
+    SUBDIR += p5-IO-Event
     SUBDIR += p5-IO-HTML
     SUBDIR += p5-IO-Handle-Util
     SUBDIR += p5-IO-Interactive
