Breaks on a 4-core build, mark MAKE_JOBS_UNSAFE
Submitted by:	Christoph Mallon <christoph.mallon@gmx.de>
Feature safe:	yes


git-svn-id: svn+ssh://svn.freebsd.org/ports/head@316135 35697150-7ecd-e111-bb59-0022644237b5

--- a/devel/cross-gcc/Makefile
+++ b/devel/cross-gcc/Makefile
@@ -41,6 +41,7 @@ USES=		bison
 STRIP=		#empty
 GNU_CONFIGURE=	yes
 ALL_TARGET=	all info
+MAKE_JOBS_UNSAFE=yes
 
 DEPENDS_ARGS=	TGTARCH="${TGTARCH}" TGTABI="${TGTABI}"
 
