Enhance your listening experience, stay up-to-date with what your friends are listening to, view your listening history and share it with friends. The more Last.fm learns what you like, the better it gets.
WWW: http://www.last.fm/download

PR:		ports/177233
Submitted by:	Gvozdikov Veniamin <g.veniamin@googlemail.com>
Feature safe:	yes


git-svn-id: svn+ssh://svn.freebsd.org/ports/head@316136 35697150-7ecd-e111-bb59-0022644237b5

--- a/audio/Makefile
+++ b/audio/Makefile
@@ -351,6 +351,7 @@
     SUBDIR += lash
     SUBDIR += last-cmus
     SUBDIR += last.fm
+    SUBDIR += lastfm-desktop
     SUBDIR += liba52
     SUBDIR += libaacplus
     SUBDIR += libadplug
