Update to tzdata2013c:
- antarctica: AusAQ and ATAQ have been removed.
- Antarctica/Macquarie has been moved to australasia file and AU.

- Asia/Hebron, Palestine updated for 2013.

Feature safe: yes


git-svn-id: svn+ssh://svn.freebsd.org/ports/head@316137 35697150-7ecd-e111-bb59-0022644237b5

--- a/misc/zoneinfo/Makefile
+++ b/misc/zoneinfo/Makefile
@@ -5,7 +5,7 @@
 # $FreeBSD$
 
 PORTNAME=	zoneinfo
-DISTVERSION=	2013b
+DISTVERSION=	2013c
 CATEGORIES=	misc
 MASTER_SITES=	ftp://ftp.iana.org/tz/releases/ \
 		ftp://munnari.oz.au/pub/
