Fix NLS support
PR:		ports/177353 (based on)
Submitted by:	Norihiko Murase <mur1080224@inter7.jp>
Feature safe:	yes


git-svn-id: svn+ssh://svn.freebsd.org/ports/head@316138 35697150-7ecd-e111-bb59-0022644237b5

--- a/ftp/yafc/Makefile
+++ b/ftp/yafc/Makefile
@@ -36,11 +36,10 @@ PLIST_FILES=	bin/yafc
 .if ${PORT_OPTIONS:MNLS}
 USE_GNOME+=	intltool
 USE_GETTEXT=	yes
-LDFLAGS+=	-lintl
 PLIST_FILES+=	share/locale/de/LC_MESSAGES/yafc.mo \
 		share/locale/sv/LC_MESSAGES/yafc.mo
 .else
-CONFIGURE_ARGS+=	--disable-nls
+CONFIGURE_ARGS+=	--without-gettext
 .endif
 
 .if ${PORT_OPTIONS:MREADLINE}
