- Take maintainership - Tab->space after WWW in pkg-descr - Trim Makefile header
Approved by:	jgh (maintainer), eadler (mentor)
Discussed with:	ak
Feature safe:	yes


git-svn-id: svn+ssh://svn.freebsd.org/ports/head@316139 35697150-7ecd-e111-bb59-0022644237b5

--- a/security/py-pycrypto/Makefile
+++ b/security/py-pycrypto/Makefile
@@ -1,5 +1,4 @@
-# Created by:			nbm
-#
+# Created by: nbm
 # $FreeBSD$
 
 PORTNAME=	pycrypto
@@ -10,7 +9,7 @@ MASTER_SITES=	CHEESESHOP \
 		https://ftp.dlitz.net/pub/dlitz/crypto/pycrypto/
 PKGNAMEPREFIX=	${PYTHON_PKGNAMEPREFIX}
 
-MAINTAINER=	jgh@FreeBSD.org
+MAINTAINER=	koobs@FreeBSD.org
 COMMENT=	The Python Cryptography Toolkit
 
 USE_PYTHON=		yes
