Fix build when SAMPLERATE=off We can't use USES=cmake here - main project builds with gmake.
PR:		ports/177285
Submitted by:	r4721@tormail.org
Approved by:	maintainer timeout
Feature safe:	yes


git-svn-id: svn+ssh://svn.freebsd.org/ports/head@316143 35697150-7ecd-e111-bb59-0022644237b5

--- a/audio/audacity/Makefile
+++ b/audio/audacity/Makefile
@@ -124,6 +124,7 @@ CONFIGURE_ARGS+=	--without-portmixer
 LIB_DEPENDS+=		samplerate:${PORTSDIR}/audio/libsamplerate
 CONFIGURE_ARGS+=	--with-libsamplerate
 .else
+BUILD_DEPENDS+=		cmake:${PORTSDIR}/devel/cmake
 CONFIGURE_ARGS+=	--without-libsamplerate
 .endif
 
