Fix typo in GD_DESC.
Approved by:	ale
Feature safe:	yes


git-svn-id: svn+ssh://svn.freebsd.org/ports/head@316164 35697150-7ecd-e111-bb59-0022644237b5

--- a/mail/roundcube/Makefile
+++ b/mail/roundcube/Makefile
@@ -36,7 +36,7 @@ PGSQL_DESC=	Use PostgreSQL backend
 SQLITE_DESC=	Use SQLite backend (needs PHP 5.3 or below)
 SSL_DESC=	Enable SSL support (imaps or google spellcheck)
 LDAP_DESC=	Enable LDAP support (address book)
-GD_DESC=	Enable GD support (image convertion)
+GD_DESC=	Enable GD support (image conversion)
 PSPELL_DESC=	Enable PSpell support (internal spellcheck)
 NSC_DESC=	Install network spellchecker
 
