--- a/net-mgmt/kismet/Makefile
+++ b/net-mgmt/kismet/Makefile
@@ -18,6 +18,7 @@ LICENSE=	GPLv2
 
 GNU_CONFIGURE=	yes
 USE_GMAKE=	yes
+USE_XZ=		yes
 CPPFLAGS+=	-I${LOCALBASE}/include
 LDFLAGS+=	-L${LOCALBASE}/lib
 
