- There is no need to update the desktop database because epiar's desktop file doesn't have MIME definition in it.
Submitted by:	makc
Approved by:	nemysis@gmx.ch (maintainer)
Feature safe:	yes


git-svn-id: svn+ssh://svn.freebsd.org/ports/head@316169 35697150-7ecd-e111-bb59-0022644237b5

--- a/games/epiar/Makefile
+++ b/games/epiar/Makefile
@@ -3,6 +3,7 @@
 
 PORTNAME=	epiar
 PORTVERSION=	0.5.1
+PORTREVISION=	1
 CATEGORIES=	games
 MASTER_SITES=	http://epiar.net/files/epiar/releases/0.5/
 
@@ -26,7 +27,6 @@ USE_GL=		glu
 GNU_CONFIGURE=	yes
 USE_AUTOTOOLS=	aclocal
 USE_GMAKE=	yes
-USE_GNOME=	desktopfileutils
 USE_PKGCONFIG=	build
 MAKE_JOBS_SAFE=	yes
 
@@ -46,7 +46,5 @@ post-install:
 	@${MKDIR} ${DOCSDIR}
 	${INSTALL_DATA} ${PORTDOCS:S|^|${WRKSRC}/|} ${DOCSDIR}
 .endif
-
-	@-update-desktop-database -q
 
 .include <bsd.port.mk>
