- Update to 3.2.0 - Cleanup Makefile header - Update WWW and reformat pkg-descr
Changes:
- On newer Linux systems, we use libkmod to look up kernel modules
  (modules.pcimap no longer exists.) To facilitate this, libpci is able to look
  up module aliases in sysfs.
- Various minor bug fixes.
- Updated pci.ids to the today's snapshot of the database.

Feature safe:	yes


git-svn-id: svn+ssh://svn.freebsd.org/ports/head@316176 35697150-7ecd-e111-bb59-0022644237b5

--- a/devel/libpci/Makefile
+++ b/devel/libpci/Makefile
@@ -1,12 +1,8 @@
-# New ports collection makefile for:	libpci
-# Date created:				June 14, 2003
-# Whom:					Samy Al Bahra <samy@kerneled.org>
-#
+# Created by: Samy Al Bahra <samy@kerneled.org>
 # $FreeBSD$
-#
 
 PORTNAME=	libpci
-PORTVERSION=	3.1.10
+PORTVERSION=	3.2.0
 CATEGORIES=	devel
 MASTER_SITES=	ftp://atrey.karlin.mff.cuni.cz/pub/linux/pci/ \
 		LOCAL/sunpoet
