Update to the 20130414 snapshot of GCC 4.9.0.  This requires a fix for libitm which didn't expect the OS to define __always_inline by itself (and differently).
Also, this no longer installs libffi and its info and man pages which
was always meant to remain for internal use only.

Feature safe:	yes


git-svn-id: svn+ssh://svn.freebsd.org/ports/head@316178 35697150-7ecd-e111-bb59-0022644237b5

--- a/lang/gcc49/Makefile
+++ b/lang/gcc49/Makefile
@@ -2,7 +2,7 @@
 # $FreeBSD$
 
 PORTNAME=	gcc
-PORTVERSION=	4.9.0.20130319
+PORTVERSION=	4.9.0.20130414
 CATEGORIES=	lang java
 MASTER_SITES=	${MASTER_SITE_GCC}
 MASTER_SITE_SUBDIR=	snapshots/${VERSIONSTRING}
@@ -127,13 +127,8 @@ MAN1+=		aot-compile${SUFFIX}.1 \
 		jcf-dump${SUFFIX}.1 \
 		jv-convert${SUFFIX}.1 \
 		rebuild-gcj-db${SUFFIX}.1
-MAN3=		ffi${SUFFIX}.3 \
-		ffi_call${SUFFIX}.3 \
-		ffi_prep_cif${SUFFIX}.3 \
-		ffi_prep_cif_var${SUFFIX}.3
 INFO+=		gcc${SUFFIX}/cp-tools \
-		gcc${SUFFIX}/gcj \
-		gcc${SUFFIX}/libffi
+		gcc${SUFFIX}/gcj
 PLIST_SUB+=	JAVA=""
 .else
 CONFIGURE_ARGS+=--disable-libgcj
