--- a/math/gretl/files/patch-lib::Makefile.in
+++ b/math/gretl/files/patch-lib::Makefile.in
@@ -1,40 +1,11 @@
---- lib/Makefile.in.orig	2011-02-16 09:15:14.000000000 -0500
-+++ lib/Makefile.in	2011-03-02 09:03:21.000000000 -0500
-@@ -38,6 +38,10 @@
-   RPATH = $(DARWIN_RPATH)
- endif
- 
-+CPPFLAGS = @CPPFLAGS@
-+LDFLAGS = @LDFLAGS@
-+INTL_LIBS = @LTLIBINTL@
-+
- ifeq ($(INSTALL_PROGRAM),)
-   INSTALL_PROGRAM = $(INSTALL) -m 755
- endif
-@@ -59,14 +63,14 @@
- 
- # Installation directories
- includedir = $(prefix)/include/gretl
--pkgconfigdir = $(libdir)/pkgconfig
-+pkgconfigdir = $(prefix)/libdata/pkgconfig
- 
- INSTALLDIRS = $(DESTDIR)$(libdir) $(DESTDIR)$(includedir) $(DESTDIR)$(pkgconfigdir)
+--- lib/Makefile.in.orig	2013-04-20 18:39:30.000000000 -0400
++++ lib/Makefile.in	2013-04-20 18:39:44.000000000 -0400
+@@ -68,7 +68,7 @@
  
  LIBGRETL = libgretl-1.0.la 
  
 -LIBS = $(LAPACK_LIBS) -lm -ldl -lz $(XML_LIBS) \
--	$(GLIB_LIBS) $(GMP_LIBS) $(FFTW_LIBS)
 +LIBS = $(LAPACK_LIBS) -lm -lz $(XML_LIBS) \
-+	$(GLIB_LIBS) $(GMP_LIBS) $(FFTW_LIBS) $(INTL_LIBS)
+ 	$(GLIB_LIBS) $(GMP_LIBS) $(FFTW_LIBS) $(CURL_LIBS)
  
  #### End of system configuration section. ####
- 
-@@ -241,7 +245,7 @@
- LIBTOOL = ../libtool
- 
- override CFLAGS += -I.. -I$(topsrc) -I$(libsrc) $(XML_CFLAGS) $(GLIB_CFLAGS) \
--	$(GMP_CFLAGS) $(FFTW_CFLAGS) $(RLIB_CFLAGS) -DHAVE_CONFIG_H $(LIBDEF)
-+	$(GMP_CFLAGS) $(FFTW_CFLAGS) $(RLIB_CFLAGS) $(CPPFLAGS) -DHAVE_CONFIG_H $(LIBDEF)
- 
- COMPILE = $(LIBTOOL) --mode=compile $(CCV) -c $(CFLAGS) 
- 
