--- a/games/pokerth/Makefile
+++ b/games/pokerth/Makefile
@@ -2,10 +2,9 @@
 # $FreeBSD$
 
 PORTNAME=	pokerth
-PORTVERSION=	1.0
-PORTREVISION=	3
+PORTVERSION=	1.0.1
 CATEGORIES=	games
-MASTER_SITES=	SF/${PORTNAME}/${PORTNAME}/${PORTVERSION}
+MASTER_SITES=	SF/${PORTNAME}/${PORTNAME}/1.0
 DISTNAME=	PokerTH-${PORTVERSION}-src
 
 MAINTAINER=	madpilot@FreeBSD.org
