--- a/deskutils/xfce4-notifyd/Makefile
+++ b/deskutils/xfce4-notifyd/Makefile
@@ -2,8 +2,7 @@
 # $FreeBSD$
 
 PORTNAME=	xfce4-notifyd
-PORTVERSION=	0.2.2
-PORTREVISION=	4
+PORTVERSION=	0.2.3
 CATEGORIES=	deskutils xfce
 MASTER_SITES=	XFCE
 MASTER_SITE_SUBDIR=	src/apps/${PORTNAME}/${PORTVERSION:R}
@@ -21,21 +20,17 @@ USE_AUTOTOOLS=	libtool
 GNU_CONFIGURE=	yes
 USE_BZIP2=	yes
 USE_GMAKE=	yes
-USE_GNOME=	gtk20 gnomehack intltool intlhack desktopfileutils
+USE_GNOME=	gtk20 intltool intlhack desktopfileutils
 USE_PKGCONFIG=	build
-USE_XFCE=	configenv libexo libmenu libutil xfconf
+USE_XFCE=	configenv libmenu libutil xfconf
 INSTALLS_ICONS=	yes
 USE_XORG=	x11
 
-CONFIGURE_ARGS=	--disable-debug
-
-CONFLICTS=	notification-daemon-[0-9]* xfce4-notification-daemon-[0-9]* \
-		xfce4-notifyd-0.1*
+CONFLICTS=	notification-daemon-[0-9]* xfce4-notification-daemon-[0-9]*
 
 MAN1=	xfce4-notifyd-config.1
 
 OPTIONS_DEFINE=	NLS
-OPTIONS_DEFAULT=NLS
 
 .include <bsd.port.options.mk>
 
@@ -44,6 +39,7 @@ USE_GETTEXT=	yes
 CONFIGURE_ARGS+=--enable-nls
 PLIST_SUB+=	NLS=""
 .else
+EXTRA_PATCHES=	${FILESDIR}/extra-patch-configure
 CONFIGURE_ARGS+=--disable-nls
 PLIST_SUB+=	NLS="@comment "
 .endif
