Fix options list for audio/soundkonverter.
Add NLS to list of options, as required by the Porters Handbook.

Approved by:	eadler,bdrewery (mentors, implicit)
Feature safe:	yes


git-svn-id: svn+ssh://svn.freebsd.org/ports/head@316189 35697150-7ecd-e111-bb59-0022644237b5

--- a/audio/soundkonverter/Makefile
+++ b/audio/soundkonverter/Makefile
@@ -23,6 +23,7 @@ INSTALLS_ICONS=	yes
 MAKE_JOBS_SAFE=	yes
 WRKSRC=	${WRKDIR}/${PORTNAME}-${PORTVERSION}
 
+OPTIONS_DEFINE=	NLS
 OPTIONS_MULTI=	CODEC FILTER REPLAYGAIN
 OPTIONS_MULTI_CODEC=	AFTEN FAAC FFMPEG FLAC FLAKE FLUIDSYNTH LAME MAC MPLAYER \
 		MUSEPACK NEROAAC OPUSTOOLS SHORTEN SPEEX TIMIDITY TTA \
