--- a/archivers/paq/Makefile
+++ b/archivers/paq/Makefile
@@ -2,10 +2,10 @@
 # $FreeBSD$
 
 PORTNAME=	paq
-PORTVERSION=	20130414
+PORTVERSION=	20130419
 CATEGORIES=	archivers
 MASTER_SITES=	http://mattmahoney.net/dc/ LOCAL/bf/paq/
-DISTFILES=	wbpe110.zip zpaq624a.zip zpipe.201.zip
+DISTFILES=	wbpe110.zip zpaq625.zip zpipe.201.zip
 DIST_SUBDIR=	${PORTNAME}
 EXTRACT_ONLY=	${DISTFILES:M*.zip}
 
